posiGen_FullsendBox/src/objects/Referral_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Delivering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the Employee who is delivering the Payout (Gift Card)</inlineHelpText>
        <label>Employee Delivering</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Card_PIN__c</fullName>
        <label>Gift Card PIN</label>
        <length>3</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Gift_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Card</label>
        <referenceTo>Gift_Card__c</referenceTo>
        <relationshipName>Payouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Notes__c</fullName>
        <label>Payment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payout Batch</label>
        <referenceTo>Payout_Batch__c</referenceTo>
        <relationshipName>Payouts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Payouts1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Referrer_Account_to_Apply_Credit_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer Account to Apply Credit To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referral Payments For Credit</relationshipLabel>
        <relationshipName>Referral_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_Address__c</fullName>
        <formula>Referral__r.Referrer_Address__c &amp; &quot;, &quot; &amp;  Referral__r.Referrer_City__c &amp; &quot;, &quot; &amp;  Referral__r.Referrer_State__c &amp; &quot;, &quot; &amp;  Referral__r.Referring_ZIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_City__c</fullName>
        <formula>Referral__r.Referrer_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_State__c</fullName>
        <formula>Referral__r.Referrer_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <formula>Referral__r.Referrer__r.FirstName &amp; &quot; &quot; &amp;  Referral__r.Referrer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Office for Pick Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivering By Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt Confirmed with Proof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit to Bill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Referral Payment</label>
    <listViews>
        <fullName>Payouts_Not_Yet_Paid_Out</fullName>
        <columns>Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Gift_Card__c</columns>
        <columns>Gift_Card_PIN__c</columns>
        <columns>Payout_Batch__c</columns>
        <columns>Referral__c</columns>
        <columns>Receipt_Date__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Receipt Confirmed,Receipt Confirmed with Proof</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Referral_Payment__c.Gift_Card</value>
        </filters>
        <label>Payouts Not Yet Paid Out</label>
    </listViews>
    <listViews>
        <fullName>Referral_Payments_All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Gift_Card__c</columns>
        <columns>Gift_Card_PIN__c</columns>
        <columns>Payout_Batch__c</columns>
        <columns>Referral__c</columns>
        <columns>Receipt_Date__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Referral Payments - All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Payout Numeric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Payments</pluralLabel>
    <recordTypes>
        <fullName>Credit_to_Bill</fullName>
        <active>true</active>
        <description>Used when a Referrer has their bill credited with Referral money</description>
        <label>Credit to Bill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Card</fullName>
        <active>true</active>
        <description>Used when a Gift Card is issued to a Referrer</description>
        <label>Gift Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>PreGCTrackingGiftCard</fullName>
        <active>true</active>
        <label>PreGCTrackingGiftCard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>